# QLoRA_ex

./: .gitignore  README.md  pyproject.toml
configs/: qlora_qwen.yaml  qlora_qwen_assistant_only.yaml  qlora_qwen_completion_only.yaml
data/schema/: operation_schema.json  sample_db_schema.sql
reports/: adapter_assistant_only_eval_full.md  adapter_checkpoint100_eval.md  adapter_checkpoint100_eval_full.md  adapter_completion_only_eval_full.md  baseline_comparison.md  eval_report.md  experiment_log.md  lmstudio_base_eval.md  lmstudio_prompt_only_eval.md
scripts/: compare_evaluations.py  evaluate_adapter.py  evaluate_lmstudio.py  generate_dataset.py  train_qlora.py  validate_dataset.py
src/finetune_lab/: __init__.py  comparison.py  dataset_generator.py  evaluator.py  lmstudio_client.py  prompts.py  reporting.py  schemas.py  sql_converter.py  training_config.py  training_data.py
tests/: test_comparison.py  test_dataset_generator.py  test_evaluator.py  test_prompts.py  test_schema_validation.py  test_sql_converter.py  test_training_config.py  test_training_data.py
