[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-lab"
version = "0.1.0"
description = "QLoRA experiment lab for converting Japanese business instructions into JSON operation plans."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
train = [
  "datasets>=2.19",
  "peft>=0.11",
  "torch>=2.3",
  "transformers>=4.44",
  "trl>=0.10",
  "bitsandbytes>=0.43; platform_system != 'Windows'",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
